alignment fix & controls

--- a/src/main/resources/DigitalAssistant/gui/scenes/chatStyles.css
+++ b/src/main/resources/DigitalAssistant/gui/scenes/chatStyles.css
@@ -5,9 +5,21 @@
     -fx-background-radius: 5 5 5 5;
 }
 
+#scrollPane .button{
+
+    -fx-background-radius: 5 5 5 5;
+}
+
 #chatbox{
     -fx-background-color: #333333;
 }
 #textField{
     -fx-prompt-text-fill: #757575;
+}
+
+.flowpane {
+    -fx-padding: 0 0 0 10;
+    -fx-background-radius: 5 5 5 5;
+    -fx-hgap: 4;
+
 }
